# Ironjail

./: Cargo.toml  DEMO_GUIDE.md  README.md  test_script.sh
analysis-results/: session_20250917_202630.json  session_20250917_203041.json  session_20250917_203609.json  session_20250917_203754.json  session_20250917_203928.html  session_20250917_203928.json
config/: default.yaml  demo-policy.yaml  minimal-policy.yaml
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  namespace.rs  process.rs  sandbox.rs
src/deception/: environment.rs  mod.rs  network.rs
src/monitoring/: filesystem.rs  mod.rs  network.rs  process.rs
src/policy/: manager.rs  mod.rs  rules.rs
src/reporting/: analysis.rs  generator.rs  mod.rs
src/reporting/templates/: file_table.hbs  main_report.hbs  network_table.hbs  statistics.hbs  syscall_table.hbs  threat_assessment.hbs  timeline.hbs
src/tracing/: mod.rs  ptrace_handler.rs  syscall_tracer.rs
