[package]
name = "ironjail"
version = "0.1.0"
edition = "2021"
authors = ["Security Research Team"]
description = "Advanced Malware Analysis Sandbox with System Call Tracing, Network Monitoring, and Environment Deception"
license = "MIT"
keywords = ["security", "sandbox", "malware-analysis", "forensics", "containment"]
categories = ["command-line-utilities", "development-tools", "os::unix-apis"]

[[bin]]
name = "ironjail"
path = "src/main.rs"

[dependencies]
# CLI and Configuration
clap = { version = "4.0", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# System interaction and process management
nix = { version = "0.27", features = ["process", "signal", "mount", "user", "socket", "sched", "resource", "ptrace"] }
libc = "0.2"

# Async and runtime
tokio = { version = "1.0", features = ["full"] }

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system operations
inotify = "0.10"
walkdir = "2.0"

# Network monitoring and packet capture
pcap = "1.0"

# Security and sandboxing
seccomp = "0.1.2"
caps = "0.5"

# Data structures and utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

# Cryptography and hashing
sha2 = "0.10"
hex = "0.4"

# Report generation
handlebars = "4.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"



[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"


